# gdrs

./: Cargo.toml  README.md
.github/workflows/: CI.yml
bindings/: .gitignore  Cargo.toml  pyproject.toml
bindings/src/: lib.rs  models.rs  tools.rs
gdrs/: Cargo.toml  README.md
gdrs/src/: lib.rs  main.rs  models.rs
gdrs/tests/: tests.rs
gdrs/tests/data/: test.bed
src/: lib.rs  main.rs  models.rs
tests/: tests.rs
