[package]
name = "pygdrs"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gdrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["anyhow"] }
gdrs = { path = "../gdrs"}
anyhow = "1.0.81"
