[package]
name = "gdrs"
version = "0.1.3"
edition = "2021"
description = "A rust implementation of GenomicDistributions package from bioconductor."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bio = "1.5.0"
clap = "4.5.4"
flate2 = "1.0.28"
rust-lapper = "1.1.0"

[dev-dependencies]
rstest = "0.18.2"
